--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@grpc/proto-loader": "^0.6.9",
+    "google-protobuf": "^3.19.3",
+    "grpc": "^1.24.7",
     "knex": "^1.0.1",
     "lorem-ipsum": "^2.0.4",
     "pg": "^8.7.1"
