--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "grpc": "^1.24.7",
     "knex": "^1.0.1",
     "lorem-ipsum": "^2.0.4",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
