--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -2,9 +2,9 @@
   "name": "impacter-posts-grpc-sever",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "init-db": "knex migrate:latest && knex seed:run",
     "reset-db": "knex migrate:rollback && knex migrate:latest && knex seed:run"
