--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server",
+    "init-server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "init-db": "knex migrate:latest && knex seed:run",
     "reset-db": "knex migrate:rollback && knex migrate:latest && knex seed:run"
